# apple-midi-network-cli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/apple_midi_cli/: ams_ax_identifiers.py  cli.py  coremidi_manual.py
swift/MidiSessionDemo/: Package.swift
swift/MidiSessionDemo/Sources/MidiSessionDemo/: main.swift
tests/: test_list_e2e.py
