[project]
name = "apple-midi-cli"
version = "0.1.0"
description = "CLI for automating the setup of Apple MIDI Network Sessions"
authors = [
    { name = "Robert Hargreaves", email = "python-package@roberthargreaves.net" },
]
requires-python = ">=3.13"
dependencies = ["mido>=1.3.3", "python-rtmidi>=1.5.8", "typer>=0.24.1"]

[project.scripts]
apple-midi-cli = "apple_midi_cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2"]
